fix: lightbox &  navigation menu on mobile
* close lightbox on bg click, rather than close button
* give nav menu a higher z-index than the lightbox

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -34,4 +34,9 @@
     .panel-cover.header-page-root {
         overflow-y: auto
     }
+
+    /* needs a crazy z-index to display in front of the lightbox */
+    .panel-cover.header-page-visual {
+        z-index: 3000;
+    }
 }
